2007-06-11  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclExecute.c:  comments added to explain iPtr->numLevels
	management.

	* generic/tclNamesp.c:   tweaks to Tcl_GetCommandFromObj and
	* generic/tclObj.c:      TclGetNamespaceFromObj 

2007-06-10  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:    Further TEOvI split, creating a new 
	* generic/tclCompile.h:  TclEvalObjvKnownCommand() function to  
	* generic/tclExecute.c:  handle commands that are already known
	and are not traced. INST_INVOKE now calls into this function
	instead of inlining parts of TEOvI. Same perf, better isolation. 
	
2007-06-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* README: updated links. [Bug 1715081]

	* generic/tclExecute.c (TclExecuteByteCode): restore support for
	INST_CALL_BUILTIN_FUNC1 and INST_CALL_FUNC1 bytecodes to support
	8.4- precompiled sources (math functions). [Bug 1720895]

2007-06-10  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclInt.h:
	* generic/tclNamesp.c:
	* generic/tclObj.c:
	* generic/tclvar.c: new macros TclGetCurrentNamespace() and
	TclGetGlobalNamespace(); Tcl_GetCommandFromObj and
	TclGetNamespaceFromObj rewritten to make the logic clearer;
	slightly faster too. 

2007-06-09  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclExecute.c (INST_INVOKE): isolated two vars to the
	small block where they are actually used.
	
	* generic/tclObj.c (Tcl_GetCommandFromObj): rewritten to make the
	logic clearer; slightly faster too.
	
	* generic/tclBasic.c:   Split TEOv in two, by separating a
	processor for non-TCL_OK returns. Also split TEOvI in a full
	version that handles non-existing and traced commands, and a
	separate shorter version for the regular case.

	* generic/tclBasic.c:   Moved the generation of command strings	for
	* generic/tclTrace.c:   traces: previously in Tcl_EvalObjv(), now
	in TclCheck[Interp|Execution]Traces(). Also insured that the
	strings are properly nul terminated at the correct length 
	[Bug 1693986]
